# jlibc

./: CPPLINT.cfg  README.md  jc_log.h  jc_memory.h  jc_template.h  jc_util.h  run_tests.sh
.github/workflows/: cmake-multi-platform.yml
docs/: jc_log.md  jc_memory.md  jc_util.md
examples/: Makefile
examples/log/: .gitignore  Makefile  colored_io.c  logger.c
examples/memory/: .gitignore  Makefile  bad_free.c  corruption.c  memory.c  memory.h  no_free.c
examples/util/: .gitignore  Makefile  read_lines  read_lines.c
tests/: CMakeLists.txt
tests/log/: CMakeLists.txt  die_sigill.c  dummy.c
tests/memory/: CMakeLists.txt  default.c  memory.c  memory.h  test_canary.c  test_free.c  test_malloc.c  test_realloc.c
tests/util/: CMakeLists.txt  num2str.c  num2str_data.txt  num2str_gen_data.sh  read_lines.c  read_lines.txt  str2num.c  util.c
